--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: java
+sudo: required
 jdk:
   - oraclejdk8
 services: mongodb
+before_install:
+  - chmod +x gradlew
+  - gradlew clean
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
