--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,11 @@ buildscript {
 		reactorVersion = '3.0.7.RELEASE'
 		reactorKotlinVersion = '1.0.0.M2'
 		restAssuredVersion = '3.0.3'
+        asciidoctorVersion = '1.5.3'
+        springRestDocsVersion = '1.2.1.RELEASE'
 	}
 	repositories {
+        jcenter()
 		mavenCentral()
 		maven { url "https://repo.spring.io/snapshot" }
 		maven { url "https://repo.spring.io/milestone" }
@@ -17,6 +20,7 @@ buildscript {
 		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}")
+        classpath("org.asciidoctor:asciidoctor-gradle-plugin:${asciidoctorVersion}")
 	}
 }
 
@@ -25,9 +29,17 @@ apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'org.asciidoctor.convert'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
+
+ext {
+    snippetsDir = file('build/generated-snippets')
+}
+
+ext['spring-restdocs.version'] = '1.2.1.RELEASE'
+
 compileKotlin {
 	kotlinOptions.jvmTarget = "1.8"
 }
@@ -36,11 +48,11 @@ compileTestKotlin {
 }
 
 repositories {
+    jcenter()
 	mavenCentral()
 	maven { url "https://repo.spring.io/snapshot" }
 	maven { url "https://repo.spring.io/milestone" }
 }
-
 
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb-reactive')
@@ -53,4 +65,34 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	testCompile('io.projectreactor.addons:reactor-test')
 	testCompile("io.rest-assured:rest-assured:${restAssuredVersion}")
+	testCompile("org.springframework.restdocs:spring-restdocs-restassured:${springRestDocsVersion}")
+}
+
+test {
+    outputs.dir snippetsDir
+}
+
+asciidoctor {
+    dependsOn test
+    sourceDir = file('src/docs/asciidoc')
+    inputs.dir snippetsDir
+    outputDir "$projectDir/src/main/resources/static"
+	attributes 'snippets': snippetsDir
+}
+
+jar {
+    dependsOn asciidoctor
+    baseName = 'initiatives-ideas'
+    version =  version
+    from ("${asciidoctor.outputDir}/html5") {
+        into 'static/docs'
+    }
+}
+
+task cleanTempDir(type: Delete) {
+	delete asciidoctor.outputDir
+}
+
+clean {
+	dependsOn cleanTempDir
 }
