#12 Displaying generated docs

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /build/
 !gradle/wrapper/gradle-wrapper.jar
 
+### Static ###
+src/main/resources/static/html5/
+
 ### STS ###
 .apt_generated
 .classpath
