--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
 		restAssuredVersion = '3.0.3'
         asciidoctorVersion = '1.5.3'
         springRestDocsVersion = '1.2.1.RELEASE'
+        ghPublishVersion = '0.2.1'
 	}
 	repositories {
         jcenter()
@@ -21,6 +22,7 @@ buildscript {
 		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}")
         classpath("org.asciidoctor:asciidoctor-gradle-plugin:${asciidoctorVersion}")
+        classpath("org.ajoberstar:gradle-git-publish:${ghPublishVersion}")
 	}
 }
 
@@ -30,6 +32,7 @@ apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.asciidoctor.convert'
+apply plugin: 'org.ajoberstar.git-publish'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
@@ -85,7 +88,7 @@ jar {
     baseName = 'initiatives-ideas'
     version =  version
     from ("${asciidoctor.outputDir}/html5") {
-        into 'static/docs'
+        into 'static/html5'
     }
 }
 
@@ -95,4 +98,19 @@ task cleanTempDir(type: Delete) {
 
 clean {
 	dependsOn cleanTempDir
+}
+
+gitPublish {
+    repoUri = 'git@github.com:SopraSteriaGroup/initiatives_backend_ideas.git'
+    branch = 'gh-pages'
+    repoDir = file("$buildDir/gitPublish")
+    contents {
+        from(file("${asciidoctor.outputDir}/html5"))
+    }
+    commitMessage = 'Publishing a new API guide'
+}
+
+task publish(type: GradleBuild) {
+    dependsOn asciidoctor
+    tasks = ['gitPublishPush']
 }
