#12 Change output docs dir

--- a/build.gradle
+++ b/build.gradle
@@ -88,7 +88,7 @@ jar {
     baseName = 'initiatives-ideas'
     version =  version
     from ("${asciidoctor.outputDir}/html5") {
-        into 'static/html5'
+        into 'static/docs'
     }
 }
 
