--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
+		classpath("org.jetbrains.kotlin:kotlin-noarg:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
 		classpath("org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}")
         classpath("org.asciidoctor:asciidoctor-gradle-plugin:${asciidoctorVersion}")
@@ -27,6 +28,7 @@ buildscript {
 }
 
 apply plugin: 'kotlin'
+apply plugin: 'kotlin-noarg'
 apply plugin: 'kotlin-spring'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
@@ -69,6 +71,10 @@ dependencies {
 	testCompile('io.projectreactor.addons:reactor-test')
 	testCompile("io.rest-assured:rest-assured:${restAssuredVersion}")
 	testCompile("org.springframework.restdocs:spring-restdocs-restassured:${springRestDocsVersion}")
+}
+
+noArg {
+	annotation("org.springframework.data.mongodb.core.mapping.Document")
 }
 
 test {
