--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ buildscript {
 		kotlinVersion = '1.1.2'
 		springBootVersion = '2.0.0.BUILD-SNAPSHOT'
 		jacksonVersion = '2.8.8'
-		reactorVersion = '3.0.7.RELEASE'
+		reactorVersion = '3.1.0.BUILD-SNAPSHOT'
 		reactorKotlinVersion = '1.0.0.M2'
 		restAssuredVersion = '3.0.3'
         asciidoctorVersion = '1.5.3'
@@ -24,12 +24,14 @@ buildscript {
 		classpath("org.jetbrains.kotlin:kotlin-test-junit:${kotlinVersion}")
         classpath("org.asciidoctor:asciidoctor-gradle-plugin:${asciidoctorVersion}")
         classpath("org.ajoberstar:gradle-git-publish:${ghPublishVersion}")
+		classpath("se.transmode.gradle:gradle-docker:1.2")
 	}
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-noarg'
 apply plugin: 'kotlin-spring'
+apply plugin: 'docker'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
@@ -37,6 +39,7 @@ apply plugin: 'org.asciidoctor.convert'
 apply plugin: 'org.ajoberstar.git-publish'
 
 version = '0.0.1-SNAPSHOT'
+group = "ssg"
 sourceCompatibility = 1.8
 
 ext {
@@ -50,6 +53,11 @@ compileKotlin {
 }
 compileTestKotlin {
 	kotlinOptions.jvmTarget = "1.8"
+}
+
+docker {
+	baseImage "openjdk:8-jre"
+	maintainer 'Jocelyn NTAKPE <https://github.com/jntakpe>'
 }
 
 repositories {
@@ -68,7 +76,7 @@ dependencies {
 	compile("org.jetbrains.kotlin:kotlin-stdlib-jre8:${kotlinVersion}")
 	compile("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	testCompile('io.projectreactor.addons:reactor-test')
+	testCompile("io.projectreactor.addons:reactor-test:${reactorVersion}")
 	testCompile("io.rest-assured:rest-assured:${restAssuredVersion}")
 	testCompile("org.springframework.restdocs:spring-restdocs-restassured:${springRestDocsVersion}")
 }
@@ -91,7 +99,7 @@ asciidoctor {
 
 bootJar {
     dependsOn asciidoctor
-    baseName = 'initiatives-ideas'
+    baseName = 'initiatives_backend_ideas'
     version =  version
     from ("${asciidoctor.outputDir}/html5") {
         into 'static/html5'
@@ -120,3 +128,15 @@ task publish(type: GradleBuild) {
     dependsOn asciidoctor
     tasks = ['gitPublishPush']
 }
+
+
+task buildDocker(type: Docker) {
+	setEnvironment('SPRING_PROFILES_ACTIVE','docker')
+	volume("/tmp")
+	addFile("build/libs/initiatives_backend_ideas-${version}.jar",'app.jar')
+	runCommand("bash -c 'touch /app.jar'")
+	entryPoint(['java', '-Djava.security.egd=file:/dev/./urandom', '-jar', '/app.jar'])
+	exposePort 8080
+}
+
+buildDocker.dependsOn(build)
